# AI-Therapist

./: .gitignore  .mcp.json  DEPENDENCY_MANAGEMENT_SUMMARY.md  README.md  WEBSOCKET_STREAMING_IMPLEMENTATION.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json
backend /: package-lock.json  package.json  (+1 more)
backend fast api/pipecat-quickstart/pipecat-quickstart/server/: Dockerfile  bot.py  cekura.py  db.py  hydra_memory.py  improver.py  pcc-deploy.toml  pyproject.toml  simple_bot.py  verify_hydra_memory.py  verify_session_memory.py  weave_eval.py
backend fast api/pipecat-quickstart/pipecat-quickstart/server/prompts/: v1.txt  v2.txt  v3.txt
backend fast api/pipecat-quickstart/pipecat-quickstart/server/transcripts/: 0f01176c-7365-4575-ba37-621975123245.json  15ac916b-5624-481d-9a76-29df36e47cec.json  1770463b-9428-41b5-a585-c89e0c9816ca.json  270c0673-3561-46d0-a594-3f20027580d5.json  3945fde6-2671-4214-974d-1bbebffdf3ac.json  4edd6e9d-7150-4a63-8d3b-c43f45f0c7e9.json  5224736a-52a2-45c8-a517-0f661497e5d3.json  586e73b7-69d8-40b9-a3b2-549cc86aeab7.json  71b40c16-4a18-49ad-a860-29495ef0e889.json  82375e47-c3b8-4abe-9554-e0c9d0ca7b69.json  918810da-ff03-42ca-ba14-1300e48d34ad.json  98097e22-e964-4afc-ba32-70a8c299cf0c.json  a11aab5f-44e8-4e38-b12b-1b4ac186fce0.json  b582c8d6-9ef5-4968-acde-d705d50a35be.json  bbe90caa-8099-458b-8c38-9f88ab1d4ab2.json  d4049789-a674-4bbf-a164-4cee11cd9c58.json  e297b157-32f9-4867-958d-17008d7afd0b.json  e5d73ba3-532f-4b9e-a714-ff26b538e8ad.json  f56c467b-0227-4dca-9301-d202df81937d.json  test-ai-therapist.json
(+138 files in other folders)
